<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorF7F7F7"
              android:clickable="false"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y88"
        android:background="@color/titlebackgourndColor"
        android:orientation="horizontal">
        <Button
            android:id="@+id/feedback_return"
            style="@style/button_return_style"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_feedback"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/ytext18"/>
    </RelativeLayout>
    <!-- 标题栏以下的控件 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y40"
        android:padding="@dimen/x20"
        android:text="@string/text_feedback_desc"
        android:textColor="@color/titlebackgourndColor"
        android:textSize="@dimen/ytext14"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/y30"
        android:background="@color/itemBorderColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y260"
        android:orientation="vertical">
        <EditText
            android:id="@+id/mzfeedback_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/text_feedback_desc"
            android:lineSpacingExtra="@dimen/x4"
            android:maxLength="200"
            android:imeOptions="actionNext"
            android:paddingBottom="@dimen/x20"
            android:paddingLeft="@dimen/x30"
            android:paddingTop="@dimen/x20"
            android:textColor="@color/colorbfbfbf"
            android:textColorHint="@color/itemBorderColor"
            android:textSize="@dimen/ytext13"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/itemBorderColor"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/y20"
        android:background="@color/itemBorderColor"/>
    <EditText
        android:id="@+id/mzfeedback_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/text_feedback_tel"
        android:lineSpacingExtra="@dimen/x4"
        android:maxLength="11"
        android:inputType="phone"
        android:paddingBottom="@dimen/y30"
        android:paddingTop="@dimen/y30"
        android:imeOptions="actionDone"
        android:paddingLeft="@dimen/x30"
        android:paddingRight="@dimen/x20"
        android:textColor="@color/colorbfbfbf"
        android:textColorHint="@color/itemBorderColor"
        android:textSize="@dimen/ytext13"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/itemBorderColor"/>
    <Button
        android:id="@+id/feedback_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/y40"
        android:background="@drawable/border_6c4b4a_shape"
        android:stateListAnimator="@null"
        android:text="@string/register_ok"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/ytext16"/>
</LinearLayout>
