<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="@dimen/x520"
                android:layout_height="match_parent"
                android:background="@color/menubackgrounbColor">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/x40"
        android:layout_marginTop="@dimen/y90"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menu_layout1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:layout_marginBottom="@dimen/x10"
            android:background="@drawable/selector_menu_item_background"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/x30">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/icon_home_investment"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/x30"
                android:text="@string/menu_textTitle1"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/ytext15"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/menu_layout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:layout_marginBottom="@dimen/x10"
            android:background="@drawable/selector_menu_item_background"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/x30">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/icon_home_return"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/x30"
                android:text="@string/menu_textTitle2"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/ytext15"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/menu_layout4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:layout_marginBottom="@dimen/x10"
            android:background="@drawable/selector_menu_item_background"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/x30">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/icon_home_trade"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/x30"
                android:text="@string/menu_textTitle4"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/ytext15"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/menu_layout5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:layout_marginBottom="@dimen/x10"
            android:background="@drawable/selector_menu_item_background"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/x30">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/icon_home_news"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/x30"
                android:text="@string/menu_textTitle5"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/ytext15"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_layout3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:layout_marginBottom="@dimen/x10"
            android:background="@drawable/selector_menu_item_background"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/x30">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/icon_home_money"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/x30"
                android:text="@string/update_password_title"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/ytext15"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_layout6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:layout_marginBottom="@dimen/x10"
            android:background="@drawable/selector_menu_item_background"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/x30">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/icon_home_money"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/x30"
                android:text="@string/menu_textTitle6"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/ytext15"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>