<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="#6C4B4A"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/tab1_xml"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#6C4B4A"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@mipmap/icon_btn_home"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/botton_one"
            android:textColor="#faf4e6"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab2_xml"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#6C4B4A"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@mipmap/icon_btn_account"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/botton_two"
            android:textColor="#faf4e6"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab3_xml"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#6C4B4A"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@mipmap/icon_btn_community"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/botton_three"
            android:textColor="#faf4e6"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab4_xml"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#6C4B4A"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@mipmap/icon_btn_more"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/botton_four"
            android:textColor="#faf4e6"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>